--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.1",
     "jshint": "^2.9.1"
   }
 }
