--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "express": "^4.13.4"
   },
-  
+
   "devDependencies": {
     "grunt": "^0.4.5",
+    "bower": "^1.4.1",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
