--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
-    "name": "twitch-tournament-ticket",
-    "version": "1.0.0",
-    "description": "",
-    "engines": {
-        "node": "4.2.2",
-        "npm": "2.13.2"
-    },
-    "main": "server/server.js",
-    "scripts": {
-        "start": "node server/server.js",
-        "postinstall": "bower install && grunt build"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/MaxBreakfast/twitch-tournament-ticket.git"
-    },
-    "author": "",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/MaxBreakfast/twitch-tournament-ticket/issues"
-    },
-    "homepage": "https://github.com/MaxBreakfast/twitch-tournament-ticket#readme",
-    "dependencies": {
-        "express": "^4.13.4",
-        "grunt": "^0.4.5",
-        "bower": "^1.4.1",
-        "grunt-contrib-concat": "^1.0.0",
-        "grunt-contrib-cssmin": "^1.0.0",
-        "grunt-contrib-uglify": "^1.0.0",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-nodemon": "^0.4.1",
-        "jshint": "^2.9.1"
-    },
-
-    "devDependencies": {
-
-    }
+  "name": "twitch-tournament-ticket",
+  "version": "1.0.0",
+  "description": "",
+  "engines": {
+    "node": "4.2.2",
+    "npm": "2.13.2"
+  },
+  "main": "server/server.js",
+  "scripts": {
+    "start": "node server/server.js",
+    "postinstall": "bower install && grunt build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MaxBreakfast/twitch-tournament-ticket.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MaxBreakfast/twitch-tournament-ticket/issues"
+  },
+  "homepage": "https://github.com/MaxBreakfast/twitch-tournament-ticket#readme",
+  "dependencies": {
+    "bower": "^1.4.1",
+    "express": "^4.13.4",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.1",
+    "jshint": "^2.9.1"
+  },
+  "devDependencies": {}
 }
