--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
         "grunt-contrib-cssmin": "^1.0.0",
         "grunt-contrib-uglify": "^1.0.0",
         "grunt-contrib-watch": "^0.6.1",
-        "grunt-nodemon": "^0.4.1",
+        "grunt-nodemon": "^0.4.1"
     }
 }
