--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.5.0",
     "jquery": "^2.2.1",
     "angular-ui-router": "^0.2.18",
-    "angular-filter": "^0.5.8"
+    "angular-filter": "^0.5.8",
+    "bootstrap": "^3.3.6"
   }
 }
